--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -46,6 +47,7 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.0",
@@ -61,6 +63,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.5",
